--- a/matching_notebook.ipynb
+++ b/matching_notebook.ipynb
@@ -2916,7 +2916,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "965de578",
+   "id": "4e939cce",
    "metadata": {},
    "outputs": [
     {
@@ -2935,7 +2935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3d92745",
+   "id": "63c4c373",
    "metadata": {},
    "source": [
     "На этих векторах будем учить классификатор"
@@ -2944,7 +2944,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "dc7b52a0",
+   "id": "3ddb2ccf",
    "metadata": {},
    "outputs": [
     {
@@ -2963,7 +2963,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03973a65",
+   "id": "a9ed352c",
    "metadata": {},
    "source": [
     "Нижний порог. Результаты хуже этого означают, что классификатор только ухудшает работу"
@@ -4386,7 +4386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "916b7caa",
+   "id": "089f2303",
    "metadata": {},
    "source": [
     "Random Forest долгий, посмотрим на 10_000 строк. Благо, метрика написана так, что позволяет подобные \"финты\""
@@ -4429,7 +4429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "029fea28",
+   "id": "3e433c5e",
    "metadata": {},
    "source": [
     "А это метрика для первых 10к строк из 5 кандидатов"
@@ -4438,7 +4438,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "2c9ffd88",
+   "id": "650ed6f4",
    "metadata": {},
    "outputs": [
     {
@@ -4533,7 +4533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a0df6d7",
+   "id": "343f1515",
    "metadata": {},
    "source": [
     "##### Logreg"
@@ -4598,7 +4598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "223538d4",
+   "id": "3128801d",
    "metadata": {},
    "source": [
     "##### Catboost"
@@ -5833,7 +5833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8defc154",
+   "id": "a3b889b6",
    "metadata": {},
    "source": [
     "Переобучились"
@@ -7151,7 +7151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb9916e2",
+   "id": "e546f234",
    "metadata": {},
    "source": [
     "Уже хорошо. Алгоритм пока топ-1. Даже можно добавить доп. деревьев, т.к. нет переобучения"
@@ -7194,7 +7194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "105b1747",
+   "id": "fdbb5d56",
    "metadata": {},
    "source": [
     "Вывод:\n",
@@ -7269,7 +7269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1e12569",
+   "id": "2093f044",
    "metadata": {},
    "source": [
     "Переобучение. Нужно контроллиовать глубину деревьев"
@@ -8603,7 +8603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a1bcc51",
+   "id": "ac710149",
    "metadata": {},
    "source": [
     "Это лучшая модель на данный момент. Векторы вместе с расстояниями разделяют классы лучше. Можно попробовать RF, но инференс очень долгий, остановимся на катбусте.\n",
@@ -8614,7 +8614,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "efc0360a",
+   "id": "a00f4180",
    "metadata": {},
    "outputs": [
     {
@@ -8657,7 +8657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b631593d",
+   "id": "4594c605",
    "metadata": {},
    "source": [
     "И на 50 векторах"
@@ -8666,7 +8666,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "cbbb60e5",
+   "id": "b9ab3e1b",
    "metadata": {},
    "outputs": [
     {
@@ -8709,7 +8709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "953e29cf",
+   "id": "97d0e4fe",
    "metadata": {},
    "source": [
     "50 векторов ранжируются уже хуже"
@@ -8717,7 +8717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab1fa38c",
+   "id": "f3f4f644",
    "metadata": {},
    "source": [
     "#### Улучшение результата"
@@ -8725,7 +8725,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bb3d24a",
+   "id": "aff70dda",
    "metadata": {},
    "source": [
     "Что дальше:\n",
@@ -8736,7 +8736,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "797e3ccf",
+   "id": "570e1a23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8749,7 +8749,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "4b1587a1",
+   "id": "802ea108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8764,7 +8764,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9909a4b8",
+   "id": "34838ca8",
    "metadata": {},
    "outputs": [
     {
@@ -8795,7 +8795,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2e162139",
+   "id": "dc6d29ea",
    "metadata": {},
    "outputs": [
     {
@@ -8826,7 +8826,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4058b03f",
+   "id": "15174c76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8837,7 +8837,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f4f2935a",
+   "id": "00318b27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8849,7 +8849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8649ab4",
+   "id": "7cd257a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8859,7 +8859,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1ed01e1b",
+   "id": "083d767d",
    "metadata": {},
    "outputs": [
     {
@@ -8895,7 +8895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "342b2c84",
+   "id": "fb740715",
    "metadata": {},
    "source": [
     "Поиск по сетке по всем этим данным не влезет в память, проверим на 10%"
@@ -8904,7 +8904,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "eef6494e",
+   "id": "47d3ed1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8919,7 +8919,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "169a67b7",
+   "id": "86493009",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8930,7 +8930,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "c9bcbae8",
+   "id": "87f1d4f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8943,7 +8943,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "9558893c",
+   "id": "994676b5",
    "metadata": {},
    "outputs": [
     {
@@ -16052,7 +16052,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d66ff1e4",
+   "id": "694b2e35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16063,7 +16063,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "0bf2c9a3",
+   "id": "a3fffd13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16074,7 +16074,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4cf199e6",
+   "id": "26da08fc",
    "metadata": {},
    "outputs": [
     {
@@ -17644,7 +17644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43027d7e",
+   "id": "e6ac8ff8",
    "metadata": {},
    "source": [
     "Прошу простить за длинные выводы :)"
@@ -17653,7 +17653,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "a1de8952",
+   "id": "63a2d0ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17664,7 +17664,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "4b228a04",
+   "id": "95225143",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17674,7 +17674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f6c8d00",
+   "id": "a7a32c78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17685,7 +17685,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "59c10457",
+   "id": "85e71fc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17696,7 +17696,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "c345e100",
+   "id": "eb970c08",
    "metadata": {},
    "outputs": [
     {
@@ -17731,7 +17731,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "5ffa14a1",
+   "id": "7a333586",
    "metadata": {},
    "outputs": [
     {
@@ -17770,7 +17770,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "4bb0ba00",
+   "id": "400481ff",
    "metadata": {},
    "source": [
     "![samurai_doge.gif](attachment:samurai_doge.gif)"
@@ -17778,7 +17778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54467859",
+   "id": "bed88e76",
    "metadata": {},
    "source": [
     "### Выводы и результаты"
@@ -17786,7 +17786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "092fd168",
+   "id": "daf484e2",
    "metadata": {},
    "source": [
     "- Построена двухэтапная модель (поиск `FAISS` и ранжирование с `CatboostClassifier`)\n",
@@ -17808,10 +17808,13 @@
     "#### Результат\n",
     "Метрика acc@5 на валидации на 5 лучших кандидатах из 50 отранжированных составила 75.122\n",
     "\n",
+    "Время работы алгоритма для выборки из 100_000 векторов составило 32 минуты (10 минут поиск `FAISS` и 22 минуты на инференс(включая генерацию фич для тестовой выборки) на i5-9600K для выборки\n",
+    "\n",
     "#### Что нужно доделать:\n",
     "- Поискать иные подходы (возможно, считать разницу между признаками)\n",
     "- Поэкспериментировать с другими скейлерами, например `QuantileTransformer`\n",
     "- Попробовать заменить `FAISS` на `Quadrant` или `Annoy`\n",
+    "- Сделать код ранжирования эффективнее (Отрабатывает долго. Вероятно, из-за множества инициализаций)\n",
     "- Тюнить модель\n",
     "- Купить больше оперативной памяти =)\n"
    ]
@@ -17819,7 +17822,84 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4348e43c",
+   "id": "400515ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03c512d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16ae7776",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ba01ab9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "764ced56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8ff910b",
+   "metadata": {},
+   "source": [
+    "Доп эксперименты"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cec91f81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "_, idxs_val_50 = index.search(np.ascontiguousarray(validation_array[:,mask]).astype('float32'), 250)\n",
+    "accuracy_n(targets_val, idxs_val_50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f54d6d5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = []\n",
+    "for i, candidates in tqdm(enumerate(idxs_val_50)):\n",
+    "    query = validation_array[i]\n",
+    "    query_features = make_concatenated_with_distances(candidates, query, base_array)\n",
+    "    top_5_candidates = candidates[most_similar_5(model.predict_proba(query_features))]\n",
+    "    result.append(top_5_candidates)\n",
+    "\n",
+    "accuracy_n(targets_val, np.array(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bceb944",
    "metadata": {},
    "outputs": [],
    "source": []
